# api/swagger.yaml
@@ -1,9 +1,17 @@
+basePath: /
 definitions:
   handler.CategoryResponse:
     properties:
       name:
         type: string
       slug:
+        type: string
+    type: object
+  handler.CreateLogRequest:
+    properties:
+      level:
+        type: string
+      message:
         type: string
     type: object
   handler.CreateTaskRequest:
@@ -14,6 +22,10 @@ definitions:
         type: string
       name:
         type: string
+    type: object
+  handler.LogResponse:
+    properties:
+      id: {}
     type: object
   handler.SigninRequest:
     properties:
@@ -54,19 +66,36 @@ definitions:
       uuid:
         type: string
     type: object
+  handler.UpdateUserName:
+    properties:
+      new_name:
+        type: string
+      version:
+        type: integer
+    type: object
   handler.UserResponse:
     properties:
-      created_at:
-        type: string
       email:
         type: string
       id:
         type: string
       name:
         type: string
+      version:
+        type: integer
     type: object
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  description: TODO API
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
+  title: TODO API
+  version: "1.0"
 paths:
   /api/health-check:
     get:
@@ -111,6 +140,52 @@ paths:
       summary: User Logged
       tags:
       - User
+  /api/v1/current/user/update-name:
+    put:
+      consumes:
+      - application/json
+      description: Update user name
+      parameters:
+      - description: Update User Name
+        in: body
+        name: update_user_name
+        required: true
+        schema:
+          $ref: '#/definitions/handler.UpdateUserName'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User
+          schema:
+            $ref: '#/definitions/handler.UserResponse'
+      security:
+      - BearerAuth: []
+      summary: Update User Name
+      tags:
+      - User
+  /api/v1/logs:
+    post:
+      consumes:
+      - application/json
+      description: Create new Log
+      parameters:
+      - description: New Log
+        in: body
+        name: new_log
+        required: true
+        schema:
+          $ref: '#/definitions/handler.CreateLogRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Create Log success
+          schema:
+            $ref: '#/definitions/handler.LogResponse'
+      summary: Create Log
+      tags:
+      - Log
   /api/v1/signin:
     post:
       consumes:
@@ -266,6 +341,9 @@ paths:
       summary: Mark task as undone
       tags:
       - Task
+schemes:
+- http
+- https
 securityDefinitions:
   BearerAuth:
     in: header
